test/errors/offsets_error/zs/literal_error.zs
package literal_error;

struct LiteralError
{
13:
    string field;
};
